--- a/index.html
+++ b/index.html
@@ -1,15 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ariful Islam</title>
     <link rel="stylesheet" href="/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
-    
+    <section class=" top-container">
+        <div class="container">
+            <div class="inner-container-left">
+                <h1>Welcome to <br>
+                    <span class="name"> Ariful Islam</span> World
+                </h1>
+                <h5>
+                    Build Climber and Train Stopper</h5>
+                <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                    work. That's why I am learning and mastering web development. I will not stop until I become the Web
+                    Development Hero.You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a
+                    dime for that work. That's why I am learning and mastering web development. I will not stop until I
+                    become the Web Development Hero.</p>
+                <a href="" class="btn">Hire Me</a>
+            </div>
+            <div class="inner-container-right">
+                <img src="/images/my-bg.png" alt="">
+            </div>
+        </div>
+
+    </section>
+    <section class="mid-container">
+        <div class="container">
+            <div class="inner-container-right">
+                <img src="/images/my-bg2.png" alt="">
+            </div>
+            <div class="inner-container-left">
+                <h2>Dream Big</h2>
+                <h5>Become a web developer</h5>
+                <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+                <a href="" class="btn">Download Resume</a>
+            </div>
+        </div>
+
+
+    </section>
+    <h1 class="experience-heading">Experiences</h1>
+    <section class="experience-container">
+        <div class="container">
+            <div class="inner-container-experience">
+                <h1>Full Stack Web Developer</h1>
+                <h5>2021-Present | Pro Level Developer</h5>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="inner-container-experience">
+                <div class="experience-item">
+                    <h1>Baby Web Developer</h1>
+                    <h5>2020-2021 | Programming Hero Learner</h5>
+                    <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
+
 </html>
