--- a/index.html
+++ b/index.html
@@ -44,26 +44,33 @@
                 <a href="" class="btn">Download Resume</a>
             </div>
         </div>
-
-
     </section>
-    <h1 class="experience-heading">Experiences</h1>
+
+
+   
     <section class="experience-container">
+        <h1 class="experience-heading">Experiences</h1>
         <div class="container">
             <div class="inner-container-experience">
-                <h1>Full Stack Web Developer</h1>
-                <h5>2021-Present | Pro Level Developer</h5>
+                <h2>Full Stack Web Developer</h1>
+                <h5>2021-Present | Pro Level Developer</h2>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
             <div class="inner-container-experience">
                 <div class="experience-item">
-                    <h1>Baby Web Developer</h1>
+                    <h2>Baby Web Developer</h2>
                     <h5>2020-2021 | Programming Hero Learner</h5>
                     <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
                 </div>
             </div>
         </div>
     </section>
+
+    <footer>
+        <p>
+            © Peter Parker 2021, a Programming Hero initiative.
+        </p>
+    </footer>
 
 </body>
 
